<resources>
    <string name="app_name">magzine</string>
    <string name="button3">SPORTS</string>
    <string name="button4">POLITICS</string>
    <string name="button5">LIFESTYLE</string>
    <string name="button6">SCIENCE</string>
    <string name="button7">BUSINESS</string>
    <string name="button8">BOLLYWOOD</string>
    <string name="tv2">Particle physicists have overcome one of the biggest obstacles to a collider that would smash particles for less</string>
    <string name="tv1">Today\'s News</string>
    <string name="tv3">The researchers hope to resurrect a variety of date that was praised in antiquity but lost to time</string>
    <string name="tv4">The researchers hope to resurrect a variety of date that was praised in antiquity but lost to time</string>
    <string name="tv5">Today\'s News</string>
    <string name="tv6">Saunder, a solar finance company providing debt capital to solar enterprises in emerging markets, today announced its first disbursement in Nigeria, part of a facility of up to $4m with commercial and industrial (C&amp;I) solar developer, Daystar Power.</string>
    <string name="tv7">Esperanza, in partnership with MoveUp, has announced the deployment of EdApp to transform the way their not-for-profit organisation workforce engages in business training and social support.</string>
    <string name="tv8">Bang said there were no obvious means for the Libra Association to become profitable or make money from its users. "When you don’t understand how money gets made, it gets made in ways you don’t like," he said.</string>
    <string name="tv9">Todays\'s News</string>
    <string name="tv10">Sanjay Dutt\'s sweet anniversary wish for Maanayata Dutt, says don’t know what I would do without you</string>
    <string name="tv11">John Abraham is non-committal about rumours that he has a triple role in the upcoming Satyameva Jayate 2</string>
    <string name="tv12">Malia Aroma attended industrialist Arvind Dubash\'s 50th birthday bash in Jailer, which was a starry affair indeed.</string>
    <string name="tv13">Kolkata\'s first cabaret dancer Miss Shefali died on Thursday. She was undergoing treatment for kidney-related ailments.</string>
    <string name="tv14">Kalki Koechlin welcomes her daughter into the universe today with a beautiful post on Instagram. She named her after Sappho, the Greek poet.</string>
    <string name="tv15">Mary Higgins Clark, the tireless and long-reigning "Queen of Suspense", died on January 31.</string>
    <string name="tv16">While the AAP\'s thumping victory in Delhi polls is being projected as validation of its development model, several state governments have already taken a cue from the Arvind Kejriwal dispensation\'s flagship Mahala clinic scheme and are replicating it.</string>
    <string name="tv17"> The BJP failed to make much impact in constituencies where its leaders made controversial remarks while targeting their opponents during campaigning for the Delhi Assembly polls.</string>
    <string name="tv18">The new Delhi Legislative Assembly will have 16 first-time MLAs, all from the Aam Aadmi Party, including Atishi, Raghav Chadha and Dilip Pandey.</string>
    <string name="tv19">Virat Kohli\'s captaincy has come under the scanner after a 3–0 ODI series whitewash vs New Zealand as the Indian skipper also went through a rare bad rubber with the bat accumulating just 75 runs in the 3 matches.</string>
    <string name="tv20">For the first time in 23 years, India were whitewashed in an ODI series with 3 or more matches. This is only the 4th such instance in India\'s ODI cricket history.</string>
    <string name="tv21">While they had made it a habit of recovering from deficits in ODI series in the recent past, the absence of some big names coupled with uncharacteristic performances</string>
    <string name="tv22">Categories</string>
</resources>
