<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".MainActivity">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:text="@string/tv22"
        android:textColor="@android:color/white"
        android:textSize="30dp"/>


    <Button
        android:id="@+id/button3"
        android:layout_width="150dp"
        android:layout_height="0dp"
        android:layout_marginStart="48dp"
        android:layout_marginLeft="48dp"
        android:layout_marginTop="48dp"
        android:layout_marginBottom="288dp"
        android:background="@android:color/holo_blue_bright"
        android:text="@string/button3"
        android:textSize="30dp"
        app:layout_constraintBottom_toTopOf="@+id/button7"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button4"
        android:layout_width="150dp"
        android:layout_height="0dp"
        android:layout_marginTop="48dp"
        android:textSize="30dp"
        android:layout_marginEnd="44dp"
        android:layout_marginRight="44dp"
        android:background="@android:color/holo_blue_bright"
        android:layout_marginBottom="66dp"
        android:text="@string/button4"
        app:layout_constraintBottom_toTopOf="@+id/button6"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button5"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginStart="48dp"
        android:background="@android:color/holo_blue_bright"
        android:textSize="30dp"
        android:layout_marginLeft="48dp"
        android:text="@string/button5"
        app:layout_constraintBaseline_toBaselineOf="@+id/button6"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/button6"
        android:layout_width="150dp"
        android:layout_height="0dp"
        android:textSize="30dp"
        android:layout_marginEnd="44dp"
        android:layout_marginRight="44dp"
        android:layout_marginBottom="72dp"
        android:background="@android:color/holo_blue_bright"
        android:text="@string/button6"
        app:layout_constraintBottom_toTopOf="@+id/button8"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button4" />

    <Button
        android:id="@+id/button7"
        android:layout_width="150dp"
        android:textSize="30dp"
        android:layout_height="0dp"
        android:layout_marginStart="48dp"
        android:layout_marginLeft="48dp"
        android:layout_marginBottom="50dp"
        android:background="@android:color/holo_blue_bright"
        android:text="@string/button7"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button3" />

    <Button
        android:id="@+id/button8"
        android:layout_width="150dp"
        android:layout_height="0dp"
        android:background="@android:color/holo_blue_bright"
        android:layout_marginEnd="44dp"
        android:layout_marginRight="44dp"
        android:textSize="25dp"
        android:layout_marginBottom="50dp"
        android:text="@string/button8"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button6" />

</androidx.constraintlayout.widget.ConstraintLayout>