<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/black"
    tools:context=".politics">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tv9"
            android:background="@android:color/black"
            android:textColor="@android:color/white"
            android:textSize="50sp"/>

        <Space
            android:layout_width="match_parent"
            android:layout_height="40dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="171dp"
            android:background="@android:color/black"
            android:text="@string/tv16"
            android:textColor="@android:color/white"
            android:textSize="20sp" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="40dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/black"
            android:text="@string/tv17"
            android:textColor="@android:color/white"
            android:textSize="20sp" />
        <Space
            android:layout_width="match_parent"
            android:layout_height="40dp" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:text="@string/tv18"
            android:background="@android:color/black"
            android:textSize="20sp"
            android:textColor="@android:color/white"/>













    </LinearLayout>






</androidx.constraintlayout.widget.ConstraintLayout>