<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/black"
    tools:context=".business">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tv5"
            android:background="@android:color/black"
            android:textColor="@android:color/white"
            android:textSize="50sp"/>


        <Space
            android:layout_width="match_parent"
            android:layout_height="40dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:text="@string/tv6"
            android:textSize="20sp"
            android:background="@android:color/black"
            android:textColor="@android:color/white"
            android:textStyle="bold"/>

        <Space
            android:layout_width="match_parent"
            android:layout_height="40dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:text="@string/tv7"
            android:textSize="20sp"
            android:background="@android:color/black"
            android:textColor="@android:color/white"
            android:textStyle="bold"/>


        <Space
            android:layout_width="match_parent"
            android:layout_height="40dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:textSize="20sp"
            android:background="@android:color/black"
            android:textColor="@android:color/white"
            android:textStyle="bold"
            android:text="@string/tv8"/>



    </LinearLayout>







</androidx.constraintlayout.widget.ConstraintLayout>