<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/black"

    tools:context=".science">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="79dp"
            android:background="@android:color/black"
            android:textColor="@android:color/white"
            android:text="@string/tv1"
            android:textSize="50sp"
            android:id="@+id/tv1"
            android:textStyle="bold" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="40dp" />

        <TextView
            android:id="@+id/tv2"
            android:layout_width="match_parent"
            android:layout_height="82dp"
            android:text="@string/tv2"
            android:textSize="20sp"
            android:background="@color/black"
            android:textColor="@android:color/white"/>


        <Space
            android:layout_width="match_parent"
            android:layout_height="40dp" />

        <TextView
            android:id="@+id/tv3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tv3"
            android:textSize="20sp"
            android:background="@color/black"
            android:textColor="@android:color/white"/>

        <Space
            android:layout_width="match_parent"
            android:layout_height="40dp" />

        <TextView
            android:id="@+id/tv4"
            android:layout_width="match_parent"
            android:layout_height="69dp"
            android:background="@color/black"
            android:text="@string/tv4"
            android:textColor="@android:color/white"
            android:textSize="20sp" />


    </LinearLayout>













</androidx.constraintlayout.widget.ConstraintLayout>